--- a/src/index.module.css
+++ b/src/index.module.css
@@ -10,7 +10,6 @@
 }
 
 .mobile-header {
-  position: absolute;
   width: 100%;
   z-index: 10;
   left: 0px;
